# Carrins

./: .gitignore  .gitmodules  CMakeLists.txt  Objectives.txt
Carrins/: CMakeLists.txt
Carrins/Assets/Objects/: Cub.mtl
Carrins/Assets/Shaders/: BasicShader.glsl  TrackShader.glsl
Carrins/src/: Core.h  MAIN.cpp  UtilityMacros.h  main.cpp  pch.h
Carrins/src/Core/: App.cpp  App.h  Image.cpp  Image.h  InputCodes.h  Inupt.h  Window.h
Carrins/src/Core/Events/: Event.h
Carrins/src/Core/Renderer/: Renderer.cpp  Renderer.h  RendererAPI.h
Carrins/src/Core/Renderer/Bindables/: Cameras.cpp  Cameras.h  IndexBuffer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
Carrins/src/Game/: GameLayer.cpp  GameLayer.h  Solid.cpp  Solid.h  Track.cpp  Track.h
Carrins/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Carrins/src/Instrumentation/: Profile.h  ScopeTimer.h
Carrins/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
Carrins/src/Platform/OpenGL/Bindables/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Carrins/src/Platform/glfw/: glfwInput.cpp  glfwWindow.cpp  glfwWindow.h
Carrins/src/Utility/: Accumulator.h  BumpToNormalMap.cu  BumpToNormalMap.h  MathConstants.hpp  NumberManipulation.hpp  UtilityMacros.h
Scripts/: Win-GenProjects.bat
src/: CMakeLists.txt  Core.h
src/Core/: App.cpp  Image.h  Inupt.h  Window.h
src/Core/Events/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Core/Renderer/: Renderer.cpp  Renderer.h  RendererAPI.h
src/Core/Renderer/Bindables/: Cameras.cpp  IndexBuffer.h  Shader.h  Texture.h  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
src/Game/: GameLayer.cpp  GameLayer.h  Solid.cpp  Solid.h  Track.cpp  Track.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Instrumentation/: Profile.h
src/Platform/OpenGL/: OpenGLContext.h  OpenGLCore.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
src/Platform/OpenGL/Bindables/: OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp
src/Platform/glfw/: glfwInput.cpp  glfwInput.h  glfwWindow.cpp  glfwWindow.h
src/Utility/: Accumulator.hpp  BumpToNormalMap.cu  Manip.hpp  MathConstants.hpp
